--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,31 @@ django-mysql==2.2.0
 djangorestframework==3.7.7
 mysqlclient==1.3.12
 pytz==2017.3
+attrs==16.3.0
+Automat==0.5.0
+cffi==1.9.1
+constantly==15.1.0
+cryptography==1.7.2
+cssselect==1.0.1
+dj-database-url==0.4.2
+django==1.10.5
+gunicorn==19.7.0
+idna==2.4
+incremental==16.10.1
+lxml==3.7.3
+parsel==1.1.0
+pyasn1==0.2.3
+pyasn1-modules==0.0.8
+pycparser==2.17
+PyDispatcher==2.0.5
+pyOpenSSL==16.2.0
+python-decouple==3.0.0
+queuelib==1.4.2
+Scrapy==1.3.2
+service-identity==16.0.0
+six==1.10.0
+Twisted==17.1.0
+virtualenv==15.1.0
+w3lib==1.17.0
+whitenoise==3.3.0
+zope.interface==4.3.3
